[gd_scene load_steps=5 format=3 uid="uid://ci83104whxavk"]

[ext_resource type="Script" path="res://scene/chat/bubble.gd" id="1_37enw"]
[ext_resource type="Texture2D" uid="uid://b1hn5i1611x44" path="res://icon.svg" id="2_0ndii"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kmrp2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6pn27"]

[node name="Bubble" type="PanelContainer"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_kmrp2")
script = ExtResource("1_37enw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_6pn27")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6pn27")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6pn27")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6pn27")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6pn27")
text = "Ã—"
flat = true

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 2
size_flags_vertical = 1
autowrap_mode = 1

[node name="CopyButton" type="Button" parent="MarginContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
flat = true

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="HeadTextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_0ndii")
expand_mode = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/PanelContainer/CopyButton" to="." method="_on_copy_button_pressed"]
